[tool.poetry]
name = "huawei-sun2000l-mqtt"
version = "0.1.5"
description = ""
authors = ["Jordi Bofill <jordi.bofill@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/jbofill/huawei-sun2000l-mqtt"
repository = "https://github.com/jbofill/huawei-sun2000l-mqtt"
keywords = ["Huawei", "sun2000l", "inverter", "mqtt", "homeassistant"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators"
]
include = [
    "LICENSE",
]
packages = [
    {include = "huawei_sun2000l_mqtt"},
]

[tool.poetry.scripts]
setup_schedule = 'huawei_sun2000l_mqtt.setup_schedule:main'
print_tables = 'huawei_sun2000l_mqtt.ha_sensors_and_buttons:main'
schedule_publish = 'huawei_sun2000l_mqtt.schedule_publish:main'
sun2000publish = 'huawei_sun2000l_mqtt.sun2000publish:main'

[tool.poetry.dependencies]
python = "^3.8"
pymodbus = "^2.5.3"
asyncio = "^3.4.3"
continuous-threading = "^2.0.5"
langcodes = "^3.3.0"
# paho-mqtt = ">=1.6.1,<1.7.0"
paho-mqtt = "^1.6.1"
tabulate = "^0.8.10"
pandas = "^1.4.4"
inquirerpy = "^0.3.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pytest = "^7.1.3"
Babel = "^2.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
